--- a/assets/css/style_license_model.css
+++ b/assets/css/style_license_model.css
@@ -1,1 +1,145 @@
+html body{
+    margin: 0 auto;
+    padding: 0 auto;
+    font-family: sans-serif;
+    background-color: #0F0F0F;
+}
+
+
+/* CSS for header */
+.active{
+    color: white;
+}
+
+.header{
+    background-color: #0F0F0F;
+    width: 100%;
+    height: 4rem;
+    position: fixed;
+    align-items: center;
+    display: flex;
+}
+
+.header--logo{
+    flex: 1;
+    margin-left: 5%;
+    color: white;
+    font-size: 20px;
+    font-weight: 600;
+    white-space: nowrap;
+}
+
+.header--menu{
+    flex: 4;
+    margin-right: 20px;
+}
+
+.nav_menu{
+    display: flex;
+    list-style: none;
+    margin-left: 400px;
+}
+
+.menu_items{
+    margin-right: 20px;
+    overflow: hidden;
+    white-space: nowrap;
+    font-weight: 600;
+    -webkit-box-align: center;
+    line-height: 1.5rem;
+    display: inline-flex;
+}
+
+.menu_items-icon{
+    color: #828282;
+    align-items: center;
+}
+
+a{
+    text-decoration: none;
+    color: #828282;
+}
+
+li.menu_items>a:hover{
+    color: white;
+}
+
+.header--preimere{
+    flex: 1;
+    width: 100%;
+    height: 100%;
+    display: flex;
+}
+
+.btnPremiere{
+    width: 80%;
+    height: 55%;
+    margin:auto;
+    display: flex;
+    border-radius: 5px;
+    background-color: blue;
+}
+
+.txt_premiere{
+    text-align: center;
+    color: wheat;
+    margin: auto;
+    font-weight: 650;
+}
+
+.body1{
+    width: 100%;
+    height: 100px;
+}
+
 /* css for license model */
+.bigbox{
+    display: flex;
+}
+
+.box{
+    
+    width:528px;
+    height:296px;
+    padding : 150px 90px;
+    display: flex;
+    
+}
+.box_item1{
+   
+}
+.box_item2{
+   
+    height: 100px;
+    width: 100px;
+    
+    
+}
+.box1{
+    color:white;
+    font-size:56px;
+    line-height: 18.4px;
+}
+.box2{
+    color:#828282;
+    font-size: 21px;
+}
+.button{
+    height: 50px;
+    width: 150px;
+    font-size: 20px;
+    color: aliceblue;
+    font-family: 'Roboto', sans-serif;
+    background-color: rgb(27, 104, 204);
+}
+.button1{
+    border: 1px solid white ;
+    height: 50px;
+    width: auto;
+    white-space: nowrap;
+    font-size: 20px;
+    color: aliceblue;
+    font-family: 'Roboto', sans-serif;
+    background-color: #0F0F0F;
+
+}
