--- a/assets/css/style_sound_effect.css
+++ b/assets/css/style_sound_effect.css
@@ -3,6 +3,7 @@ html body{
     margin: 0 auto;
     padding: 0 auto;
     font-family: sans-serif;
+    background-color: #0F0F0F;
 }
 
 
@@ -88,7 +89,56 @@ li.menu_items>a:hover{
 }
 
 .body1{
-    width: 100%;
-    height: 10000px;
+    height: 256px;
+    width: 587.2px;
+    font-weight: 300px;
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+    line-height: 18,4px;
     
 }
+.text{
+    font-family: 'Epidemic', sans-serif;
+    line-height: 48px;
+    font-size: 20px;
+    font-weight: 250;
+    line-height: 48px;
+    color: rgb(255, 255, 255);
+    margin-top: 100px;
+    letter-spacing: -0.8px;
+}
+.content{
+    font-family: 'Epidemic', sans-serif;
+    font-size: 16px;
+    font-weight: 500px;
+    line-height: 24px;
+    margin top: 16px;
+    display: block;
+
+}
+.sub-content{
+    font-family: 'Epidemic', sans-serif;
+    font-size: 16px;
+    font-weight: 1000px;
+    line-height: 24px;
+    margin top: 16px;
+    display: block; 
+}
+
+.cover{
+    width: auto;
+    height: auto;
+    margin:auto;
+    display: flex;
+    border-radius: 5px;
+    background-color: blue;
+}
+.button{
+    text-align: center;
+    color: wheat;
+    margin: auto;
+    font-weight: 650;
+}
+
+
