--- a/assets/css/style_index.css
+++ b/assets/css/style_index.css
@@ -2,6 +2,9 @@ html body{
     margin: 0 auto;
     padding: 0 auto;
     font-family: sans-serif;
+    flex-direction: column;
+    display: flex;
+    background-color: #0F0F0F;
 }
 
 
@@ -24,7 +27,7 @@ html body{
     margin-left: 5%;
     color: white;
     font-size: 20px;
-    font-weight: 600;
+    font-weight: 500;
     white-space: nowrap;
 }
 
@@ -47,6 +50,11 @@ html body{
     -webkit-box-align: center;
     line-height: 1.5rem;
     display: inline-flex;
+    color: #828282;
+}
+
+.menu_items_color{
+    color: #828282;
 }
 
 .menu_items-icon{
@@ -54,9 +62,9 @@ html body{
     align-items: center;
 }
 
-a{
+li.menu_items>a{
     text-decoration: none;
-    color: #828282;
+
 }
 
 li.menu_items>a:hover{
@@ -86,7 +94,161 @@ li.menu_items>a:hover{
     font-weight: 650;
 }
 
-.body1{
+/*css for body page*/
+.tabList{
     width: 100%;
-    height: 10000px;
+    height: 70px;
+    margin-top: 63px;
+    background-color: #0F0F0F;
+}
+
+.list_menu{
+    display: flex;
+    list-style: none;
+    margin-left: 2%;
+}
+
+.list_items{
+    margin-right: 20px;
+    font-weight: 500;
+    font-size: 20px;
+    color: #828282;
+}
+
+li.list_items>a{
+    text-decoration: none;
+}
+
+.list_items_color{
+    color: #828282;
+}
+
+li.list_items>a:hover{
+    color: white;
+}
+
+/* css for album music*/
+.album_music{
+    width: 90%;
+    height: 550px;
+    margin-left: 5%;
+    border-top: 1px solid #828282;
+    background-color: #0F0F0F;
+}
+
+div.album_music>p{
+    color: white;
+    font-weight: 500;
+    font-size: 20px;
+    color: white;
+    margin-bottom: 20px;
+}
+
+.grid_album{
+    width: 100%;
+    height: 100%;
+    display: grid;
+    box-sizing: border-box;
+    grid-template-rows: repeat(2,220px);
+    grid-template-columns: repeat(6,185.5px);
+    grid-gap: 30px 20px;
+}
+
+.grid_items{
+    display: flex;
+    flex-direction: column;
+    background-color: #0F0F0F;
+}
+
+div.grid_items>img:hover{
+    cursor: pointer;
+    background-color: black;
+    opacity: 0.7;
+}
+
+div.grid_items>img{
+    width: 185.5px;
+    height: 180px;
+    object-fit: cover;
+}
+
+div.grid_items>p{
+    font-weight: 600;
+    font-size: 17px;
+    white-space: nowrap;
+    color: white;
+}
+
+@media only screen and (max-width: 820px){
+    .album_music{
+        height: 1600px;
+    }
+    .grid_album{
+        grid-template-columns: repeat(3,180px);
+        grid-template-rows: repeat(4,220px);
+    }
+    .list_menu{
+        margin-left: -3px;
+    }
+}
+@media only screen and (max-width: 500px){
+    .grid_album{
+        grid-template-columns: repeat(2,180px);
+        grid-template-rows: repeat(6,220px);
+        grid-gap: 30px 55px;
+    }
+    .list_menu{
+        margin-left: -15px;
+    }
+}
+
+/* css for layout list music staff picks */
+.list_staff_picks{
+    width: 90%;
+    height: 1000px;
+    margin-left: 5%;
+    background-color: #0F0F0F;
+    display: flex;
+    flex-direction: column;
+}
+
+.list_logo{
+    margin-top: 50px;
+    display: flex;
+}
+
+div.list_logo>img{
+    width: 80px;
+    height: 80px;
+    object-fit: cover;
+}
+
+.p1{
+    font-weight: 400;
+    font-size: 20px;
+    color: white;
+    margin-left: 15px;
+}
+
+.p2{
+    margin-top: -15px;
+    font-weight: 500;
+    font-size: 17px;
+    color: #828282;
+    margin-left: 15px;
+}
+
+.list_music{
+    width: 100%;
+    height: 710px;
+    display: grid;
+    grid-template-columns: repeat(1,100%);
+    grid-template-rows: repeat(8,80px);
+    grid-row-gap: 10px;
+}
+
+.list_music_items{
+    background-color: white;
+    align-items: center;
+    justify-content: center;
 }
