--- a/assets/css/style_license_model.css
+++ b/assets/css/style_license_model.css
@@ -25,7 +25,7 @@ html body{
     margin-left: 5%;
     color: white;
     font-size: 20px;
-    font-weight: 600;
+    font-weight: 500;
     white-space: nowrap;
 }
 
@@ -77,7 +77,7 @@ li.menu_items>a:hover{
     margin:auto;
     display: flex;
     border-radius: 5px;
-    background-color: blue;
+    background-color: #009De0;
 }
 
 .txt_premiere{
@@ -95,21 +95,21 @@ li.menu_items>a:hover{
 /* css for license model */
 .bigbox{
     display: flex;
+    height: 680px;
+    width: 100%;
 }
 
 .box{
-    
+    flex: 1;
     width:528px;
     height:296px;
-    padding : 150px 90px;
+    padding : 200px 90px;
     display: flex;
     
 }
-.box_item1{
-   
-}
+
 .box_item2{
-   
+   flex: 1;
     height: 100px;
     width: 100px;
     
@@ -123,6 +123,8 @@ li.menu_items>a:hover{
 .box2{
     color:#828282;
     font-size: 21px;
+    font-weight:500 ;
+    line-height: 24px;
 }
 .button{
     height: 50px;
@@ -130,7 +132,9 @@ li.menu_items>a:hover{
     font-size: 20px;
     color: aliceblue;
     font-family: 'Roboto', sans-serif;
-    background-color: rgb(27, 104, 204);
+    background-color: #009De0;
+    padding: 0px;
+    border: 0px;
 }
 .button1{
     border: 1px solid white ;
