--- a/assets/css/style_sound_effect.css
+++ b/assets/css/style_sound_effect.css
@@ -99,17 +99,18 @@ li.menu_items>a:hover{
     
 }
 .text{
-    font-family: 'Epidemic', sans-serif;
+    font-family: 'Roboto', sans-serif;
     line-height: 48px;
     font-size: 20px;
     font-weight: 250;
     line-height: 48px;
     color: rgb(255, 255, 255);
-    margin-top: 100px;
+    margin-top: 130px;
     letter-spacing: -0.8px;
+    display: block;
 }
 .content{
-    font-family: 'Epidemic', sans-serif;
+    font-family: 'Roboto', sans-serif;
     font-size: 16px;
     font-weight: 500px;
     line-height: 24px;
@@ -118,21 +119,20 @@ li.menu_items>a:hover{
 
 }
 .sub-content{
-    font-family: 'Epidemic', sans-serif;
+    font-family: 'Roboto', sans-serif;
     font-size: 16px;
     font-weight: 1000px;
     line-height: 24px;
     margin top: 16px;
     display: block; 
 }
-
 .cover{
-    width: auto;
-    height: auto;
+    width: 150px;
+    height: 40px;
     margin:auto;
     display: flex;
     border-radius: 5px;
-    background-color: blue;
+    background-color:#009De0;
 }
 .button{
     text-align: center;
@@ -140,5 +140,63 @@ li.menu_items>a:hover{
     margin: auto;
     font-weight: 650;
 }
+.cs1{
+    font-family: 'Roboto'sans-serif;
+    font-size: 20px;
+    font-weight: 500px;
+    line-height: 24px;
+    color: white;
+    margin-left: 60px;
+    margin-top: 16.6px;
+}
+.body2{
+    width: 90%;
+    height: 550px;
+    margin-left: 5%;
+    border-top: 1px solid #828282;
+    background-color: #0F0F0F;
+}
+div.body2>p{
+    color: white;
+    font-weight: 500;
+    font-size: 20px;
+    color: white;
+    margin-bottom: 20px;
+}   
+.SoundEffects{
+    width: 100%;
+    height: 100%;
+    display: inline-block;
+    justify-content: space-around;
+    box-sizing: border-box;
+    grid-template-rows: repeat(2,220px);
+    grid-template-columns: repeat(6,185.5px);
+    grid-gap: 30px 20px;
+    
+}
+.item{
+    display: flex;
+    flex-direction: column;
+    background-color: #0F0F0F;
+}
+div.items>img:hover{
+    cursor: pointer;
+    background-color: black;
+    opacity: 0.7;
+}
+
+div.items>img{
+    width: 185.5px;
+    height: 180px;
+    object-fit: cover;
+}
+
+div.items>p{
+    font-weight: 600;
+    font-size: 17px;
+    white-space: nowrap;
+    color: white;
+
+
 
 
