--- a/assets/css/style_sound_effect.css
+++ b/assets/css/style_sound_effect.css
@@ -78,24 +78,24 @@ li.menu_items>a:hover{
     margin:auto;
     display: flex;
     border-radius: 5px;
-    background-color: blue;
+    background-color:#009De0;
 }
 
 .txt_premiere{
     text-align: center;
-    color: wheat;
+    color: #FFFF;
     margin: auto;
     font-weight: 650;
 }
 
 .body1{
-    height: 256px;
-    width: 587.2px;
-    font-weight: 300px;
+    height: 232px;
+    width: 800px;
+    line-height: 18.4px;
     text-align: center;
+    word-spacing: 0px;
     margin-left: auto;
     margin-right: auto;
-    line-height: 18,4px;
     
 }
 .text{
@@ -107,6 +107,7 @@ li.menu_items>a:hover{
     color: rgb(255, 255, 255);
     margin-top: 130px;
     letter-spacing: -0.8px;
+    text-align: center;
     display: block;
 }
 .content{
@@ -115,6 +116,7 @@ li.menu_items>a:hover{
     font-weight: 500px;
     line-height: 24px;
     margin top: 16px;
+    text-align: center;
     display: block;
 
 }
@@ -124,6 +126,7 @@ li.menu_items>a:hover{
     font-weight: 1000px;
     line-height: 24px;
     margin top: 16px;
+    
     display: block; 
 }
 .cover{
@@ -136,7 +139,7 @@ li.menu_items>a:hover{
 }
 .button{
     text-align: center;
-    color: wheat;
+    color: #FFFF;
     margin: auto;
     font-weight: 650;
 }
@@ -153,7 +156,7 @@ li.menu_items>a:hover{
     width: 90%;
     height: 550px;
     margin-left: 5%;
-    border-top: 1px solid #828282;
+    border-top: 1px solid #333;
     background-color: #0F0F0F;
 }
 div.body2>p{
@@ -166,8 +169,7 @@ div.body2>p{
 .SoundEffects{
     width: 100%;
     height: 100%;
-    display: inline-block;
-    justify-content: space-around;
+    display: grid;
     box-sizing: border-box;
     grid-template-rows: repeat(2,220px);
     grid-template-columns: repeat(6,185.5px);
@@ -176,8 +178,11 @@ div.body2>p{
 }
 .item{
     display: flex;
-    flex-direction: column;
-    background-color: #0F0F0F;
+	flex-direction: row;
+	flex-wrap: wrap;
+	justify-content: space-between;
+	align-items: flex-start;
+	align-content: stretch;
 }
 div.items>img:hover{
     cursor: pointer;
