--- a/assets/css/style_sound_effect.css
+++ b/assets/css/style_sound_effect.css
@@ -26,7 +26,7 @@ html body{
     margin-left: 5%;
     color: white;
     font-size: 20px;
-    font-weight: 600;
+    font-weight: 500;
     white-space: nowrap;
 }
 
@@ -113,7 +113,7 @@ li.menu_items>a:hover{
     font-size: 16px;
     font-weight: 500px;
     line-height: 24px;
-    margin top: 16px;
+    margin-top: 16px;
     display: block;
 
 }
@@ -122,7 +122,7 @@ li.menu_items>a:hover{
     font-size: 16px;
     font-weight: 1000px;
     line-height: 24px;
-    margin top: 16px;
+    margin-top: 16px;
     display: block; 
 }
 
