--- a/assets/css/style_license_model.css
+++ b/assets/css/style_license_model.css
@@ -3,6 +3,7 @@ html body{
     padding: 0 auto;
     font-family: sans-serif;
     background-color: #0F0F0F;
+    position: relative;
 }
 
 
@@ -25,7 +26,7 @@ html body{
     margin-left: 5%;
     color: white;
     font-size: 20px;
-    font-weight: 600;
+    font-weight: 500;
     white-space: nowrap;
 }
 
@@ -77,7 +78,7 @@ li.menu_items>a:hover{
     margin:auto;
     display: flex;
     border-radius: 5px;
-    background-color: blue;
+    background-color: #009De0;
 }
 
 .txt_premiere{
@@ -95,34 +96,40 @@ li.menu_items>a:hover{
 /* css for license model */
 .bigbox{
     display: flex;
+    height: 680px;
+    width: 100%;
 }
 
 .box{
-    
+    flex: 1;
     width:528px;
     height:296px;
-    padding : 150px 90px;
+    padding : 200px 90px;
     display: flex;
     
 }
-.box_item1{
-   
-}
+
 .box_item2{
-   
-    height: 100px;
-    width: 100px;
+    flex: 1;
+     height: 100px;
+     width: 100px;
     
     
 }
 .box1{
     color:white;
     font-size:56px;
-    line-height: 18.4px;
+    line-height: 64px;
+    font-weight: 600;
+    letter-spacing: -1.12px;
+
 }
+
 .box2{
     color:#828282;
     font-size: 21px;
+    font-weight:500 ;
+    line-height: 24px;
 }
 .button{
     height: 50px;
@@ -130,7 +137,15 @@ li.menu_items>a:hover{
     font-size: 20px;
     color: aliceblue;
     font-family: 'Roboto', sans-serif;
-    background-color: rgb(27, 104, 204);
+    background-color: #009De0;
+    padding: 0px;
+    border: 0px;
+}
+.button:hover{
+    color: #0F0F0F;
+}
+.button1:hover{
+   background-color: #333333;
 }
 .button1{
     border: 1px solid white ;
@@ -142,4 +157,229 @@ li.menu_items>a:hover{
     font-family: 'Roboto', sans-serif;
     background-color: #0F0F0F;
 
+}
+.p2{
+    height: 472px;
+    width: 1312px;
+  
+
+}
+.text_main{
+    width: 80%;
+    height: 410px;
+    padding-top: 180px;
+    }
+.text_header{
+    color: aliceblue;
+    margin-left: 300px;
+}
+.text1{
+    font-family: 'Roboto', sans-serif;
+    font-size: 16px;
+    text-align: center;
+    height: 24px;
+    width: 920px;
+    word-spacing: 0px;
+    
+}
+.text2{
+    font-family: 'Roboto', sans-serif;
+    font-size: 40px;
+    height: 290px;
+    width: 920px;
+    line-height: 48px;
+    text-align: center;
+}
+.ask{
+    display: flex;
+    padding-top: 400px;
+
+}
+
+.ask_item1{
+    flex: 1;
+    height: 200px;
+    width: 600px;
+    padding-left: 60px;
+}
+.ask1{
+    height: 48px;
+    width: 600pxx;
+    color:#FFFFFF;
+    font-size: 40px;
+    word-spacing: 0px;
+}
+.ask2{
+    height: 100px;
+    width: 600px;
+    color: #767676;
+    line-height: 24px;
+    font-weight: 500;
+    word-spacing: 0px;
+}
+.ask_item2{
+    flex: 1;
+    line-height: 18.4px;
+}
+
+.p3{
+    height: 660px;
+    width: 1450px;
+}
+.title_list{
+    height: 660px;
+    width: 1440px;
+    border: 1px solid #FFFFFF;
+    padding: 0px 64px 0 64px;
+    margin: 0 40px 0 40px;
+}
+.main_title{
+    font-size: 16px;
+    font-weight: 300;
+    line-height: 18.4px;
+    height: 656px;
+    width: 1315px;
+    min-height: auto;
+    min-width: auto;
+    display: block;
+
+}
+h6{
+    color: #FFFFFF;
+    display: block;
+    font-size: 48px;
+    font-weight: 600;
+    letter-spacing: -0.96px;
+    line-height: 56px;
+    word-spacing: 0px;
+    height: 56px;
+    width: 1312px;
+    margin: 0 0 40px 0;
+
+}
+.list{
+    height: 560px;
+    width: 1315px;
+    display: grid;
+    font-size: 16px;
+    font-weight: 300;
+    line-height: 18.4px;
+    word-spacing: 0px;
+}
+   
+   
+.list1{
+    height: 560px;
+    width: 355px;
+    padding: 24px 32px 16px 32px;
+}
+h2{
+    color: #FFFFFF;
+    font-size: 32px;
+    font-weight: 500;
+    line-height: 40px;
+    text-align: left;
+    white-space: pre-line;
+    word-spacing: 0px;
+    height: 40px;
+    width: 352px;
+    padding: 24px 32px 16px 32px;
+    min-height: auto;
+    min-width: auto;
+    display: flex;
+}
+
+.font{
+    height: 200px;
+    width: 355px;
+    font-size: 16px;
+    font-weight: 500;
+    color: #767676;
+    word-spacing: 0px;
+    line-height: 24px;
+    
+}
+.font1{
+    font-size: 20px;
+    font-weight: 500;
+    line-height: 24px;
+    word-spacing: 0px;
+    color: #FFFFFF;
+    text-align: left;
+    padding: 0px;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+.list2{
+    height: 560px;
+    width: 355px;
+    border: 1px solid #16d15d;
+    background-color: #333333;
+    margin: 0 35px 0 35px;
+    padding: 24px 32px 16px 32px;
+}
+.list3{
+    height: 560px;
+    width: 355px;
+    border: 1px solid #16d15d;
+    background-color: #333333;
+    padding: 24px 32px 16px 32px;
 }
