--- a/assets/css/style_sound_effect.css
+++ b/assets/css/style_sound_effect.css
@@ -153,9 +153,9 @@ li.menu_items>a:hover{
     margin-top: 16.6px;
 }
 .body2{
-    width: 90%;
+    width: 80%;
     height: 550px;
-    margin-left: 5%;
+    margin-left: 10%;
     border-top: 1px solid #333;
     background-color: #0F0F0F;
 }
@@ -166,24 +166,21 @@ div.body2>p{
     color: white;
     margin-bottom: 20px;
 }   
-.SoundEffects{
-    width: 100%;
-    height: 100%;
-    display: grid;
-    box-sizing: border-box;
-    grid-template-rows: repeat(2,220px);
-    grid-template-columns: repeat(6,185.5px);
-    grid-gap: 30px 20px;
-    
-}
-.item{
+.Effects{
     display: flex;
 	flex-direction: row;
 	flex-wrap: wrap;
-	justify-content: space-between;
+	justify-content: space-around;
 	align-items: flex-start;
 	align-content: stretch;
+}    
+
+.item{
+    float: left;
+  width: 33.33%;
+  padding: 5px;
 }
+
 div.items>img:hover{
     cursor: pointer;
     background-color: black;
@@ -201,6 +198,42 @@ div.items>p{
     font-size: 17px;
     white-space: nowrap;
     color: white;
+}
+.body3{
+    width: 100%;
+    height: 550px;
+    border-top: 1px solid #333;
+    background-color: #0F0F0F;
+}
+div.body3>p{
+    color: white;
+    font-weight: 500;
+    font-size: 20px;
+    color: white;
+    margin-bottom: 20px;
+}
+.All_List{
+    display: flex;
+	flex-direction: row;
+	flex-wrap: wrap;
+	justify-content: space-around;
+	align-items: flex-start;
+	align-content: stretch;
+}
+div.list>p{
+    font-weight: 600;
+    font-size: 17px;
+    white-space: nowrap;
+    color: white;
+
+}
+.text1{
+    font-family: 'Roboto', sans-serif;
+    font-weight: 500;
+    font-size: 1.25rem;
+    line-height: 1.5rem;
+    color: rgb(255, 255, 255);
+}
 
 
 
