--- a/assets/css/style_sound_effect.css
+++ b/assets/css/style_sound_effect.css
@@ -4,6 +4,7 @@ html body{
     padding: 0 auto;
     font-family: sans-serif;
     background-color: #0F0F0F;
+    position: relative;
 }
 
 
@@ -26,7 +27,7 @@ html body{
     margin-left: 5%;
     color: white;
     font-size: 20px;
-    font-weight: 500;
+    font-weight: 600;
     white-space: nowrap;
 }
 
@@ -115,12 +116,8 @@ li.menu_items>a:hover{
     font-size: 16px;
     font-weight: 500px;
     line-height: 24px;
-<<<<<<< HEAD
-    margin-top: 16px;
-=======
     margin top: 16px;
     text-align: center;
->>>>>>> 831b1a816c9c6307e4d1408362090ec5ca0b53b3
     display: block;
 
 }
@@ -129,12 +126,8 @@ li.menu_items>a:hover{
     font-size: 16px;
     font-weight: 1000px;
     line-height: 24px;
-<<<<<<< HEAD
-    margin-top: 16px;
-=======
     margin top: 16px;
     
->>>>>>> 831b1a816c9c6307e4d1408362090ec5ca0b53b3
     display: block; 
 }
 .cover{
@@ -161,9 +154,9 @@ li.menu_items>a:hover{
     margin-top: 16.6px;
 }
 .body2{
-    width: 90%;
+    width: 80%;
     height: 550px;
-    margin-left: 5%;
+    margin-left: 10%;
     border-top: 1px solid #333;
     background-color: #0F0F0F;
 }
@@ -174,24 +167,21 @@ div.body2>p{
     color: white;
     margin-bottom: 20px;
 }   
-.SoundEffects{
-    width: 100%;
-    height: 100%;
-    display: grid;
-    box-sizing: border-box;
-    grid-template-rows: repeat(2,220px);
-    grid-template-columns: repeat(6,185.5px);
-    grid-gap: 30px 20px;
-    
-}
-.item{
+.Effects{
     display: flex;
 	flex-direction: row;
 	flex-wrap: wrap;
-	justify-content: space-between;
+	justify-content: space-around;
 	align-items: flex-start;
 	align-content: stretch;
+}    
+
+.item{
+    float: left;
+  width: 33.33%;
+  padding: 5px;
 }
+
 div.items>img:hover{
     cursor: pointer;
     background-color: black;
@@ -209,6 +199,43 @@ div.items>p{
     font-size: 17px;
     white-space: nowrap;
     color: white;
+}
+.body3{
+    width: 100%;
+    height: 550px;
+    border-top: 1px solid #333;
+    background-color: #0F0F0F;
+}
+div.body3>p{
+    color: white;
+    font-weight: 500;
+    font-size: 20px;
+    color: white;
+    margin-bottom: 20px;
+}
+.All_List{
+    display: flex;
+	flex-direction: row;
+	flex-wrap: wrap;
+	justify-content: space-around;
+	align-items: flex-start;
+	align-content: stretch;
+}
+div.list>p{
+    font-weight: 600;
+    font-size: 17px;
+    white-space: nowrap;
+    color: white;
+
+}
+.text1{
+    font-family: 'Roboto', sans-serif;
+    font-weight: 500;
+    font-size: 1.25rem;
+    line-height: 1.5rem;
+    color: rgb(255, 255, 255);
+    margin-left: 0%;
+}
 
 
 
