--- a/assets/css/style_sound_effect.css
+++ b/assets/css/style_sound_effect.css
@@ -14,6 +14,7 @@ html body{
 }
 
 .header{
+    margin-top: -20px;
     background-color: #0F0F0F;
     width: 100%;
     height: 4rem;
@@ -154,9 +155,9 @@ li.menu_items>a:hover{
     margin-top: 16.6px;
 }
 .body2{
-    width: 80%;
+    width: 90%;
     height: 550px;
-    margin-left: 10%;
+    margin-left: 5%;
     border-top: 1px solid #333;
     background-color: #0F0F0F;
 }
