--- a/assets/css/style_license_model.css
+++ b/assets/css/style_license_model.css
@@ -83,7 +83,7 @@ li.menu_items>a:hover{
 
 .txt_premiere{
     text-align: center;
-    color: wheat;
+    color: white;
     margin: auto;
     font-weight: 650;
 }
@@ -136,7 +136,6 @@ li.menu_items>a:hover{
     width: 150px;
     font-size: 20px;
     color: aliceblue;
-    font-family: 'Roboto', sans-serif;
     background-color: #009De0;
     padding: 0px;
     border: 0px;
@@ -154,7 +153,6 @@ li.menu_items>a:hover{
     white-space: nowrap;
     font-size: 20px;
     color: aliceblue;
-    font-family: 'Roboto', sans-serif;
     background-color: #0F0F0F;
 
 }
@@ -174,7 +172,6 @@ li.menu_items>a:hover{
     margin-left: 300px;
 }
 .text1{
-    font-family: 'Roboto', sans-serif;
     font-size: 16px;
     text-align: center;
     height: 24px;
@@ -183,7 +180,6 @@ li.menu_items>a:hover{
     
 }
 .text2{
-    font-family: 'Roboto', sans-serif;
     font-size: 40px;
     height: 290px;
     width: 920px;
