--- a/assets/css/style_sound_effect.css
+++ b/assets/css/style_sound_effect.css
@@ -82,13 +82,15 @@ li.menu_items>a:hover{
     border-radius: 5px;
     background-color:#009De0;
 }
-
 .txt_premiere{
     text-align: center;
     color: #FFFF;
     margin: auto;
     font-weight: 650;
 }
+.txt_premiere:hover{
+    color: black;
+}    
 
 .body1{
     height: 232px;
@@ -101,7 +103,6 @@ li.menu_items>a:hover{
     
 }
 .text{
-    font-family: 'Roboto', sans-serif;
     line-height: 48px;
     font-size: 20px;
     font-weight: 250;
@@ -113,7 +114,6 @@ li.menu_items>a:hover{
     display: block;
 }
 .content{
-    font-family: 'Roboto', sans-serif;
     font-size: 16px;
     font-weight: 500px;
     line-height: 24px;
@@ -123,7 +123,6 @@ li.menu_items>a:hover{
 
 }
 .sub-content{
-    font-family: 'Roboto', sans-serif;
     font-size: 16px;
     font-weight: 1000px;
     line-height: 24px;
@@ -138,15 +137,17 @@ li.menu_items>a:hover{
     display: flex;
     border-radius: 5px;
     background-color:#009De0;
-}
+}    
 .button{
     text-align: center;
     color: #FFFF;
     margin: auto;
     font-weight: 650;
 }
+.button:hover{
+    color: black;
+}
 .cs1{
-    font-family: 'Roboto'sans-serif;
     font-size: 20px;
     font-weight: 500px;
     line-height: 24px;
@@ -230,12 +231,99 @@ div.list>p{
 
 }
 .text1{
-    font-family: 'Roboto', sans-serif;
     font-weight: 500;
     font-size: 1.25rem;
     line-height: 1.5rem;
     color: rgb(255, 255, 255);
     margin-left: 0%;
+}
+.web_end{
+    width: 90%;
+    height: 430px;
+    margin-left: 5%;
+    display: flex;
+}
+
+.layout1{
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+}
+
+.social_network{
+    flex: 4;
+    display: flex;
+}
+
+.social_network1{
+    flex: 1;
+    padding-top: 120px;
+}
+
+div.social_network1>li{
+    text-decoration: none;
+    list-style: none;
+    font-weight: 600;
+    font-size: 16px;
+    line-height: 26px;
+    color: white;
+}
+
+div.social_network1>li:hover{
+    text-decoration: underline;
+    cursor: pointer;
+}
+
+.social_network2{
+    background-color: black;
+    flex: 1;
+}
+
+.social_network3{
+    background-color: white;
+    flex: 1;
+}
+
+.credit{
+    flex: 1;
+    display: flex;
+}
+
+.credit1{
+    flex: 1;
+}
+
+.credit1>p{
+    font-weight: 600;
+    font-size: 16px;
+    line-height: 26px;
+    color: #828282;
+    margin-top: 0;
+}
+
+.credit2{
+    flex: 1;
+    display: flex;
+}
+
+div.credit2>li{
+    list-style: none;
+    margin-right: 25px;
+    margin-left: 0;
+    font-weight: 600;
+    font-size: 16px;
+    line-height: 26px;
+    color: #828282;
+}
+
+.credit2>li:hover{
+    cursor: pointer;
+    text-decoration: underline;
+    text-decoration-color: #828282;
+}
+
+.layout2{
+    flex: 1;
 }
 
 
