--- a/assets/css/style_login.css
+++ b/assets/css/style_login.css
@@ -145,6 +145,20 @@ h1{
     justify-content: flex-end;
 }
 
+button{
+    width: 100%;
+    height: 100%;
+    background-color: #0696E0;
+    font-size: 16px;
+    color: white;
+    font-weight: 600;
+}
+
+button:hover{
+    color: black;
+    cursor: pointer;
+}
+
 .box_inside1{
     width: 70px;
     height: 100%;
