--- a/assets/css/style_pricing.css
+++ b/assets/css/style_pricing.css
@@ -1,1 +1,293 @@
 /* css for pricing */
+html body{
+    height: auto;
+    margin: 0 auto;
+    padding: 0 auto;
+    font-family: sans-serif;
+    flex-direction: column;
+    display: flex;
+    background-color: #0F0F0F;
+}
+
+
+/* CSS for header */
+.active{
+    color: white;
+}
+
+.header{
+    background-color: #0F0F0F;
+    width: 100%;
+    height: 4rem;
+    position: fixed;
+    align-items: center;
+    display: flex;
+}
+
+.header--logo{
+    flex: 1;
+    margin-left: 5%;
+    color: white;
+    font-size: 20px;
+    font-weight: 500;
+    white-space: nowrap;
+}
+
+.header--menu{
+    flex: 4;
+    margin-right: 20px;
+}
+
+.nav_menu{
+    display: flex;
+    list-style: none;
+    margin-left: 400px;
+}
+
+.menu_items{
+    margin-right: 20px;
+    overflow: hidden;
+    white-space: nowrap;
+    font-weight: 600;
+    -webkit-box-align: center;
+    line-height: 1.5rem;
+    display: inline-flex;
+    color: #828282;
+}
+
+.menu_items_color{
+    color: #828282;
+}
+
+.menu_items-icon{
+    color: #828282;
+    align-items: center;
+}
+
+li.menu_items>a{
+    text-decoration: none;
+
+}
+
+li.menu_items>a:hover{
+    color: white;
+}
+
+.header--preimere{
+    flex: 1;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+}
+
+.btnPremiere{
+    width: 135px;
+    height: 40px;
+    margin:auto;
+    display: flex;
+    color: white;
+    background-color: #009DE0;
+}
+
+.btnPremiere:hover{
+    color: black;
+}
+
+.txt_premiere{
+    text-align: center;
+    margin: auto;
+    font-weight: 650;
+}
+.container{
+    display: grid;
+    padding: 4rem;
+    grid-template-columns: auto repeat(3, 13rem);
+}
+.text{
+    display: flex;
+    justify-content: flex-start;
+}
+div.text>h2{
+    font-weight: 600;
+    letter-spacing: -0.02em;
+    font-size: 2rem;
+    line-height: 2.375rem;
+    color: rgb(255, 255, 255);
+}
+.box{
+    display: flex;
+}
+.content{
+    display: flex;
+    flex-direction: column;
+    height: 50px;
+    width: 100%;
+    background-color:#2e2e2e;
+    padding: 1rem;
+    margin-left: 2rem;
+}
+.sub_content{
+    font-weight: 500;
+    font-size: 1.25rem;
+    line-height: 1.5rem;
+    color: rgb(255, 255, 255);
+}
+.sub_content1{
+    font-weight: 500;
+    font-size: 1rem;
+    line-height: 1.5rem;
+    color: rgb(255, 255, 255);  
+}
+.first_month{
+    min-height: 3.75rem;
+    border-bottom: 1px solid #3f3f3f;
+}
+.l1{
+    font-weight: 500;
+    font-size: 1rem;
+    line-height: 1.5rem;
+    color: rgb(255, 255, 255);
+}
+.icon{
+    display: flex;
+}
+.logo{
+    min-height: 3.75rem;
+    max-width: 100%;
+    border-bottom: 1px solid #3f3f3f;
+}
+.tick{
+    width:100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.fa-solid{
+    display: inline-block;
+    color: white;
+}
+.box{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    width: 90%;
+    max-width: 1440px;
+    box-sizing: border-box;
+    margin: auto;
+    padding: 0 1rem;
+}
+.ask{
+    display: inline-block;
+    font-weight: 600;
+    font-size: 2rem;
+    white-space: nowrap;
+    text-align: center;
+    background: none;
+    color: rgb(0, 157, 224);
+    line-height: 2.5rem;
+    width: 17.5rem;
+    text-align: left;
+    white-space: normal;
+    margin-right: 100px;
+}
+.cover{
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    align-content: flex-start;
+    position: relative;
+    width: 100%;
+    font-weight: 300;
+}
+/* css for lay out end web */
+.web_end{
+    width: 90%;
+    height: 430px;
+    margin-left: 5%;
+    display: flex;
+}
+
+.layout1{
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+}
+
+.social_network{
+    flex: 4;
+    display: flex;
+}
+
+.social_network1{
+    flex: 1;
+    padding-top: 120px;
+}
+
+div.social_network1>li{
+    text-decoration: none;
+    list-style: none;
+    font-weight: 600;
+    font-size: 16px;
+    line-height: 26px;
+    color: white;
+}
+
+div.social_network1>li:hover{
+    text-decoration: underline;
+    cursor: pointer;
+}
+
+.social_network2{
+    background-color: black;
+    flex: 1;
+}
+
+.social_network3{
+    background-color: white;
+    flex: 1;
+}
+
+.credit{
+    flex: 1;
+    display: flex;
+}
+
+.credit1{
+    flex: 1;
+}
+
+.credit1>p{
+    font-weight: 600;
+    font-size: 16px;
+    line-height: 26px;
+    color: #828282;
+    margin-top: 0;
+}
+
+.credit2{
+    flex: 1;
+    display: flex;
+}
+
+div.credit2>li{
+    list-style: none;
+    margin-right: 25px;
+    margin-left: 0;
+    font-weight: 600;
+    font-size: 16px;
+    line-height: 26px;
+    color: #828282;
+}
+
+.credit2>li:hover{
+    cursor: pointer;
+    text-decoration: underline;
+    text-decoration-color: #828282;
+}
+
+.layout2{
+    flex: 1;
+}
