xong trang pricing

--- a/assets/css/style_pricing.css
+++ b/assets/css/style_pricing.css
@@ -202,6 +202,245 @@ div.text>h2{
     width: 100%;
     font-weight: 300;
 }
+
+/* css for pricing */
+.pricing{
+    width: 90%;
+    height: 550px;
+    margin-left: 5%;
+    display: flex;
+    flex-direction: column;
+    margin-top: 100px;
+    background-color: #0F0F0F;
+}
+.display{
+    display: flex;
+    padding-bottom: 120px;
+    height: 65px;
+    width: 1315px;
+}
+.display1{
+    color: white;
+    font-weight: 500;
+    font-size: 48px;
+    color: white;
+    width: 1013px;
+    height: 56px;
+}
+.display2{
+    color: #FFFFFF;
+    font-size: 16px;
+    height: 40px;
+    width: 300px;
+    display: flex;
+    margin-top: 60px;
+    
+}
+.display3{
+    background-color: #333333;
+    display: flex;
+    color: #eff5f8;
+    text-align: center;
+    width: 180px;
+    height: 40px;
+    font-size: 16px;
+    border-radius: 30px;
+    padding: 2px;
+    line-height: 2.35;
+    margin-left: 10px;
+    
+}
+
+.small{
+    color: #0d0b0b;
+    background-color: #FFFFFF;
+    height: 38px;
+    width: 90px;
+    border-radius: 30px;
+    margin: 0px;
+    text-align: center;
+    margin-left: 0px;
+    line-height: 2.35;
+}
+
+.img1{
+    color: #d7d9da;
+    font-size: 24px;
+    margin-top: 150px;
+    margin-left: 70px;
+    width: 1240px;
+    height: 150px;
+    background-image: url(https://images.ctfassets.net/ojtnytzl1djm/1h74fQi7mo3jE7WtVzeWna/66b0d00a690ff125b3d1bdbb77b669ca/austin-neill-IfhsSUuzaHc-unsplash_2.jpg?w=1600);
+    background-size: 1360px 150px;
+
+}
+
+.img_text >h3{
+    font-size: 21px;
+    margin-left:40px ;
+}
+.boxp{
+    height: 40px;
+    width: 135px;
+    border: 1px solid #FFFFFF;  
+    align-items: center; 
+    justify-content: center;
+    display: flex;
+    margin-left: 40px;
+}
+
+.boxp:hover{
+    background-color: #333333;
+
+}
+.boxp > p{
+    font-size: 16px;
+    color: #FFFFFF;
+   
+}
+
+
+
+
+
+
+
+
+
+
+.grid_price{
+    width: 100%;
+    height: 700px;
+    display: grid;
+    grid-template-columns: repeat(3,32%);
+    grid-template-rows: repeat(1,460px);
+    grid-column-gap: 2%;
+}
+
+.grid_items_pricing{
+    background-color: #333333;
+    display: flex;
+    flex-direction: column;
+    padding: 0 20px;
+}
+
+.pricing_title{
+    display: flex;
+}
+
+.pricing--p{
+    font-weight: 500;
+    font-size: 20px;
+    color: white;
+}
+
+.title_money{
+    font-size: 48px;
+    font-weight: 600;
+    color: white;
+}
+
+.title_month{
+    font-weight: 600;
+    font-size: 16px;
+    color: white;
+    margin-top: 30px;
+}
+
+.pricing_benefit{
+    width: 100%;
+    height: 45%;
+    margin-top: 10px;
+    display: flex;
+    flex-direction: column;
+    padding-top: 15px;
+    background-color: #333333;
+}
+div.pricing_benefit>p{
+    color: white;
+    margin-top: 0;
+    font-weight: 600;
+    font-size: 16px;
+}
+
+div.pricing_benefit>div>span>i{
+    color: white;
+}
+
+div.pricing_benefit>div{
+    padding: 5px 0;
+    display: flex;
+}
+
+.benefit_items{
+    color: white;
+    padding-left: 5px;
+    padding-right: 5px;
+    font-weight: 600;
+    font-size: 16px;
+    line-height: 24px;
+}
+
+.pricing_note{
+    width: 100%;
+    height: 40px;
+    text-align: start;
+    background-color: #333333;
+}
+
+div.pricing_note>p{
+    margin-top: 0px;
+    font-size: 12px;
+    font-weight: 600;
+    line-height: 16px;
+    color: #828282;
+}
+
+.pricing_note2{
+    width: 100%;
+    height: 10%;
+    display: flex;
+}
+
+.btn_learnMore{
+    flex: 1;
+    display: flex;
+    justify-content: flex-end;
+}
+div.btn_learnMore>div{
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    margin-top: 10px;
+    color: #009DE0;
+}
+
+.style_btn{
+    width: auto;
+    height: 100%;
+}
+
+.style_btn:hover{
+    border-bottom: 2px solid #009DE0 ;
+}
+
+div.btn_learnMore>div>p{
+    font-weight: 600;
+    font-size: 17px;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
 /* css for lay out end web */
 .web_end{
     width: 90%;
